<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/nav_color">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/user_locked"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back_text"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_continue_text"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Journey_journal_text"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#99A09A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:padding="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corners"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/txtInputEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="duraprakash141@gmail.com"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:background="@drawable/round_corners"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#99A09A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="••••••••"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:background="@drawable/round_corners"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:textColor="#EC1B1B"
                android:gravity="end"
                android:padding="3dp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_round"
                android:backgroundTint="#1478AE"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="38dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="or login with"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="38dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center"
                        android:background="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_fb"
                        android:drawableLeft="@drawable/facebooklogo"
                        android:gravity="center"
                        android:padding="8dp"
                        android:paddingStart="5dp"
                        android:text="Facebook"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/tvGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_google"
                        android:drawableLeft="@drawable/googlepluslogo"
                        android:gravity="center"
                        android:padding="8dp"
                        android:paddingStart="5dp"
                        android:text="Google"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account?"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sign Up Now"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:gravity="center"/>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>