<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".ForgotPassword_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/nav_color">

        <ImageView
            android:contentDescription="@string/email"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/forgot_password"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't worry."
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You can reset your password."
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#99A09A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:padding="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corners" >

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="duraprakash141@gmail.com"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:background="@drawable/round_corners"/>
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/tvSend"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_round"
                android:backgroundTint="#1478AE"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginTop="20dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tvLoginPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Go to Login Page"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="50dp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>