<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/nav_color">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/sign_up_user"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Name:"
                android:textColor="#99A09A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:padding="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutFullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corners"
                >

                <EditText
                    android:id="@+id/txtInputEditFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Prakash Dura"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:background="@drawable/round_corners"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#99A09A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_corners"
                >

                <EditText
                    android:id="@+id/txtInputEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="duraprakash141@gmail.com"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:background="@drawable/round_corners"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#99A09A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="••••••••"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:background="@drawable/round_corners"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Password:"
                android:textColor="#99A09A"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputEditConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="••••••••"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:background="@drawable/round_corners"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="45dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:drawableTint="@color/white"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/read_agree"
                    android:textSize="12sp"
                    android:textColor="#6B776D"
                    android:gravity="center"
                    android:padding="3dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_round"
                android:backgroundTint="#1478AE"
                android:gravity="center"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>